<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:background="@drawable/wave_2" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="148dp"
        android:fontFamily="@font/candal"
        android:text="WELCOME !"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold" />

<!--    <TextView-->
<!--        android:id="@+id/textView2"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="10dp"-->
<!--        android:text="@string/welcome_tagline"-->
<!--        android:fontFamily="@font/montserrat"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/textView" />-->

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true"
        android:layout_marginTop="200dp"
        android:layout_marginHorizontal="20dp"
        android:hint="@string/email_or_username"
        app:startIconTint="@color/primary"
        app:startIconDrawable="@drawable/ic_outline_email_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:hint="@string/password"
        android:layout_marginHorizontal="20dp"
        android:layout_alignParentStart="true"
        android:layout_below="@id/email"
        app:startIconTint="@color/primary"
        app:startIconDrawable="@drawable/ic_lock_foreground">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed_password"
            android:inputType="textPassword"
            android:background="@color/white"
            android:textColor="@color/primary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/login_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="17dp"
        android:layout_marginTop="40dp"
        android:layout_marginHorizontal="20dp"
        android:text="@string/login"
        android:drawableEnd="@drawable/ic_arrow_right_foreground"
        android:drawableTint="@color/white"
        style="@style/ButtonPurpleRounded"
        android:background="@drawable/rounded_corners_bg"
        android:layout_below="@id/password"
        android:layout_alignParentEnd="true" />


    <!--    <Button-->
<!--        android:id="@+id/button"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginBottom="15dp"-->
<!--        android:text="@string/login"-->
<!--        android:textStyle="bold"-->
<!--        android:fontFamily="@font/montserrat"-->
<!--        app:layout_constraintBottom_toTopOf="@+id/button2"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent" />-->

<!--    <Button-->
<!--        android:id="@+id/button2"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginBottom="30dp"-->
<!--        android:text="@string/signup"-->
<!--        android:textStyle="bold"-->
<!--        android:fontFamily="@font/montserrat"-->

<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent" />-->

</RelativeLayout>