<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddStudentActivity">

    <LinearLayout
        android:id="@+id/linearLayoutAddS"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/gradient"
        android:orientation="horizontal"
        android:paddingVertical="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/backBtnAddS"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:background="@drawable/ic_arrow_left"
            android:backgroundTint="@color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Add a Student"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="20dp"
            android:fontFamily="@font/montserrat"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="bold"/>

    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/add_email_s"
        style="@style/TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:hint="@string/email_or_username"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayoutAddS"
        app:startIconDrawable="@drawable/ic_baseline_email_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed_add_email_s"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/base"
            android:fontFamily="@font/montserrat"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/add_fname_s"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginHorizontal="20dp"
        android:hint="@string/first_name"
        style="@style/TextInputLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_email_s"
        app:startIconDrawable="@drawable/ic_baseline_account_circle_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed_add_fname_s"
            android:background="@color/base"
            android:fontFamily="@font/montserrat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/add_lname_s"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginHorizontal="20dp"
        android:hint="@string/last_name"
        style="@style/TextInputLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_fname_s"
        app:startIconDrawable="@drawable/ic_baseline_account_circle_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed_add_lname_s"
            android:background="@color/base"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/add_class_s"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginHorizontal="20dp"
        android:hint="Class"
        style="@style/TextInputLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_lname_s"
        app:startIconDrawable="@drawable/ic_baseline_account_box_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed_add_class_s"
            android:background="@color/base"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat" />

    </com.google.android.material.textfield.TextInputLayout>

    <android.widget.Button
        android:id="@+id/admin_add_s_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="20dp"
        android:text="Register"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:fontFamily="@font/montserrat"
        android:background="@drawable/rounded_corners_filled_bg"
        android:backgroundTint="@color/primary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_class_s" />

</androidx.constraintlayout.widget.ConstraintLayout>